docs(CLAUDE.md):重构开发助手文档结构和内容
- 重新组织文档结构，明确AI助手的核心身份和辅助能力
- 补充详细的智能开发流程和代码生成规范
- 增加项目技术栈和架构模式的上下文说明
- 完善代码质量标准和命名规范
- 添加标准代码模板和最佳实践指导- 提供详细的部署运维指南和Docker配置示例
- 增加AI辅助开发的具体命令和交互协议
- 补充性能优化建议和常见问题解决方案